--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-16" />
     <meta name="viewport" content="meteo, en ce moment, temps relle, previsions" />
     <title>Météo</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./styles/weather_media_desktop.css" />
+    <link rel="stylesheet" href="./styles/weather_media_mobile.css" />
     <link
       rel="icon"
       href="assets\Default_un_logo_pour_une_application_meteo_2_eca2b1e0-4885-451c-8e86-8c36732356ba_0.png"
