--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="fr-FR">
   <head>
     <meta charset="utf-16" />
-    <meta name="viewport" content="meteo, en ce moment, temps relle, previsions" />
+    <meta
+      name="viewport"
+      content="meteo, en ce moment, temps relle, previsions"
+    />
     <title>Météo</title>
     <link rel="stylesheet" href="./styles/weather_media_desktop.css" />
     <link rel="stylesheet" href="./styles/weather_media_mobile.css" />
@@ -12,34 +15,43 @@
     />
   </head>
   <body>
-    <article class="centrer-elements loading">
+    <article class="loading">
       <h1>En ce moment</h1>
       <img
-        class=""
         id="weather_icon"
         src="https://openweathermap.org/img/wn/50d@2x.png"
         alt="icon qui montre la meteo"
       />
-      <div class="main">
-        <img
-          class="logo"
-          src="assets\pointeur-de-localisation.png"
-          alt="Location pin"
-        />
-        <p id="location"></p>
-      </div>
-      <div class="main">
-        <img class="logo" src="assets\thermometre.png" alt="thermometre logo" />
-        <p id="temperature"></p>
-      </div>
-      <div class="main">
-        <img class="logo" src="assets/description.png" alt="description logo" />
-        <p id="description"></p>
-      </div>
-      <div class="main">
-        <img class="logo" src="assets\lhorloge.png" alt="horloge logo" />
-        <p id="time-act"></p>
-      </div>
+      <ul>
+        <li>
+          <img
+            class="logo"
+            src="assets\pointeur-de-localisation.png"
+            alt="Location pin"
+          />
+          <p id="location">chargement...</p>
+        </li>
+        <li>
+          <img
+            class="logo"
+            src="assets\thermometre.png"
+            alt="thermometre logo"
+          />
+          <p id="temperature">chargement...</p>
+        </li>
+        <li>
+          <img
+            class="logo"
+            src="assets/description.png"
+            alt="description logo"
+          />
+          <p id="description">chargement...</p>
+        </li>
+        <li>
+          <img class="logo" src="assets\lhorloge.png" alt="horloge logo" />
+          <p id="time-act">chargement...</p>
+        </li>
+      </ul>
     </article>
     <aside class="loading">
       <h2>Prochaine 24h</h2>
@@ -47,7 +59,11 @@
     </aside>
     <section id="soleil" class="loading">
       <table>
-        <thead><tr><th colspan="2">Levé et couché du soleil</th></tr></thead>
+        <thead>
+          <tr>
+            <th colspan="2">Levé et couché du soleil</th>
+          </tr>
+        </thead>
         <tbody id="table"></tbody>
       </table>
     </section>
