ajout d'html de complement

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="fr-FR">
   <head>
     <meta charset="utf-16" />
-    <meta
-      name="viewport"
-      content="meteo, en ce moment, temps relle, previsions"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Prévisions météo en temps rélle." />
+    <meta name="author" content="Dibéo" />
+    <meta name="keywords" content="météo, prévisions, temps" />
+    <meta http-equiv="refresh" content="300" />
     <title>Météo</title>
     <link rel="stylesheet" href="./styles/weather_media_desktop.css" />
     <link rel="stylesheet" href="./styles/weather_media_mobile.css" />
@@ -25,7 +26,6 @@
       <ul>
         <li>
           <img
-            class="logo"
             src="assets\pointeur-de-localisation.png"
             alt="Location pin"
           />
@@ -33,7 +33,6 @@
         </li>
         <li>
           <img
-            class="logo"
             src="assets\thermometre.png"
             alt="thermometre logo"
           />
@@ -41,14 +40,16 @@
         </li>
         <li>
           <img
-            class="logo"
             src="assets/description.png"
             alt="description logo"
           />
           <p id="description">chargement...</p>
         </li>
         <li>
-          <img class="logo" src="assets\lhorloge.png" alt="horloge logo" />
+          <img 
+            src="assets\lhorloge.png" 
+            alt="horloge logo" 
+          />
           <p id="time-act">chargement...</p>
         </li>
       </ul>
