--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <article class="loading">
+    <article class="loading" id="meteo">
       <h1>En ce moment</h1>
       <img
         id="weather_icon"
@@ -62,10 +62,12 @@
       <table>
         <thead>
           <tr>
-            <th colspan="2">Levé et couché du soleil</th>
+            <th colspan="3">Levé et couché du soleil</th>
           </tr>
         </thead>
-        <tbody id="table"></tbody>
+        <tbody>
+          <tr id="table_aujourdhui"></tr>
+        </tbody>
       </table>
     </section>
 
