correction du style

--- a/index.html
+++ b/index.html
@@ -24,33 +24,33 @@
         alt="icon qui montre la meteo"
       />
       <ul>
-        <li>
+        <li><div>
           <img
             src="assets\pointeur-de-localisation.png"
             alt="Location pin"
           />
-          <p id="location">chargement...</p>
+          <p id="location">chargement...</p></div>
         </li>
-        <li>
+        <li><div>
           <img
             src="assets\thermometre.png"
             alt="thermometre logo"
           />
-          <p id="temperature">chargement...</p>
+          <p id="temperature">chargement...</p></div>
         </li>
-        <li>
+        <li><div>
           <img
             src="assets/description.png"
             alt="description logo"
           />
-          <p id="description">chargement...</p>
+          <p id="description">chargement...</p></div>
         </li>
-        <li>
+        <li><div>
           <img 
             src="assets\lhorloge.png" 
             alt="horloge logo" 
           />
-          <p id="time-act">chargement...</p>
+          <p id="time-act">chargement...</p></div>
         </li>
       </ul>
     </article>
