--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>En ce moment</h1>
       <img
         id="weather_icon"
-        src="https://openweathermap.org/img/wn/50d@2x.png"
+        src=""
         alt="icon qui montre la meteo"
       />
       <ul>
