--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="keywords" content="météo, prévisions, temps" />
     <meta http-equiv="refresh" content="300" />
     <title>Météo</title>
-    <link rel="stylesheet" href="./styles/weather_media_desktop.css" />
-    <link rel="stylesheet" href="./styles/weather_media_mobile.css" />
+    <link rel="stylesheet" href="./styles/weather.css" />
     <link
       rel="icon"
       href="assets\Default_un_logo_pour_une_application_meteo_2_eca2b1e0-4885-451c-8e86-8c36732356ba_0.png"
@@ -24,33 +23,33 @@
         alt="icon qui montre la meteo"
       />
       <ul>
-        <li><div>
+        <li> 
           <img
             src="assets\pointeur-de-localisation.png"
             alt="Location pin"
           />
-          <p id="location">chargement...</p></div>
+          <p id="location">chargement...</p> 
         </li>
-        <li><div>
+        <li> 
           <img
             src="assets\thermometre.png"
             alt="thermometre logo"
           />
-          <p id="temperature">chargement...</p></div>
+          <p id="temperature">chargement...</p> 
         </li>
-        <li><div>
+        <li> 
           <img
             src="assets/description.png"
             alt="description logo"
           />
-          <p id="description">chargement...</p></div>
+          <p id="description">chargement...</p> 
         </li>
-        <li><div>
+        <li> 
           <img 
             src="assets\lhorloge.png" 
             alt="horloge logo" 
           />
-          <p id="time-act">chargement...</p></div>
+          <p id="time-act">chargement...</p> 
         </li>
       </ul>
     </article>
