--- a/index.html
+++ b/index.html
@@ -58,16 +58,11 @@
       <ul id="previsions"></ul>
     </aside>
     <section id="soleil" class="loading">
-      <table>
-        <thead>
-          <tr>
-            <th colspan="3">Levé et couché du soleil</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr id="table_aujourdhui"></tr>
-        </tbody>
-      </table>
+      <div id="cadran_solaire">
+        <p id="h_leve"></p>
+      <div id="aiguille"><span>aaa</span></div>
+        <p id="h_couche"></p>
+      </div>
     </section>
 
     <script src="weather.js"></script>
