--- a/index.html
+++ b/index.html
@@ -15,56 +15,47 @@
     />
   </head>
   <body>
-    <article class="loading" id="meteo">
-      <h1>En ce moment</h1>
-      <img
-        id="weather_icon"
-        src=""
-        alt="icon qui montre la meteo"
-      />
-      <ul>
-        <li> 
-          <img
-            src="assets\pointeur-de-localisation.png"
-            alt="Location pin"
-          />
-          <p id="location">chargement...</p> 
-        </li>
-        <li> 
-          <img
-            src="assets\thermometre.png"
-            alt="thermometre logo"
-          />
-          <p id="temperature">chargement...</p> 
-        </li>
-        <li> 
-          <img
-            src="assets/description.png"
-            alt="description logo"
-          />
-          <p id="description">chargement...</p> 
-        </li>
-        <li> 
-          <img 
-            src="assets\lhorloge.png" 
-            alt="horloge logo" 
-          />
-          <p id="time-act">chargement...</p> 
-        </li>
-      </ul>
-    </article>
-    <aside class="loading">
-      <h2>Prochaine 24h</h2>
-      <ul id="previsions"></ul>
-    </aside>
-    <section id="soleil" class="loading">
-      <div id="cadran_solaire">
-        <p id="h_leve"></p>
-      <div id="aiguille"><span>aaa</span></div>
-        <p id="h_couche"></p>
-      </div>
-    </section>
+    <main>
+      <article class="loading" id="meteo">
+        <h1>En ce moment</h1>
+        <img id="weather_icon" src="" alt="icon qui montre la meteo" />
+        <ul>
+          <li>
+            <img src="assets\pointeur-de-localisation.png" alt="Location pin" />
+            <p id="location">chargement...</p>
+          </li>
+          <li>
+            <img src="assets\thermometre.png" alt="thermometre logo" />
+            <p id="temperature">chargement...</p>
+          </li>
+          <li>
+            <img src="assets/description.png" alt="description logo" />
+            <p id="description">chargement...</p>
+          </li>
+          <li>
+            <img src="assets\lhorloge.png" alt="horloge logo" />
+            <p id="time-act">chargement...</p>
+          </li>
+        </ul>
+      </article>
+      <article class="loading">
+        <h2>Prochaine 24h</h2>
+        <ul id="previsions"></ul>
+      </article>
+      <article id="soleil" class="loading">
+        <div id="cadran_solaire">
+          <p id="h_leve"></p>
+          <div id="aiguille"><span>aaa</span></div>
+          <p id="h_couche"></p>
+        </div>
+      </article>
+    </main>
+    <main id="quote-container">
+      <p id="quote-text">Cliquez sur le bouton pour obtenir une citation aléatoire.</p>
+      <button onclick="getRandomQuote()">Nouvelle Citation</button>
+    </main>
 
-    <script src="weather.js"></script>
+    <script src="./js/weather.js"></script>
+    <script src="./js/quote.js"></script>
   </body>
 </html>
