--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main>
-      <article class="loading" id="meteo">
+      <article class="loading" id="card1">
         <h1>En ce moment</h1>
         <img id="weather_icon" src="" alt="icon qui montre la meteo" />
         <ul>
@@ -38,24 +38,24 @@
           </li>
         </ul>
       </article>
-      <article class="loading">
+      <article class="loading" id="card2">
         <h2>Prochaine 24h</h2>
         <ul id="previsions"></ul>
       </article>
-      <article id="soleil" class="loading">
+      <article id="card3" class="loading">
+        <h2>Cadran solaire</h2>
         <div id="cadran_solaire">
           <p id="h_leve"></p>
           <div id="aiguille"><span>aaa</span></div>
           <p id="h_couche"></p>
         </div>
       </article>
-    </main>
-    <main id="quote-container">
-      <p id="quote-text">Cliquez sur le bouton pour obtenir une citation aléatoire.</p>
-      <button onclick="getRandomQuote()">Nouvelle Citation</button>
+      <article class="loading" id="card4">
+        <p id="citation"></p>
+        <p id="auteur"></p>
+      </article>
     </main>
 
     <script src="./js/weather.js"></script>
-    <script src="./js/quote.js"></script>
   </body>
 </html>
